default/objects/LongForm_Menu_Item__c/LongForm_Menu_Item__c.object-meta.xml
<CustomObject>
    <label>LongForm Menu Item</label>
    <nameField>
        <label>LongForm Menu Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LongForm Menu Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>