default/objects/LongForm_Menu_Item__c/fields/Long_Form_Menu__c.field-meta.xml
<CustomField>
    <fullName>Long_Form_Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Long Form Menu</label>
    <referenceTo>LongForm_Menu__c</referenceTo>
    <relationshipName>Long_Form_Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>