default/objects/LongForm_Menu_Item__c/fields/Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Step_Name__c</fullName>
    <label>Step Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>